A bunch of deprecations fixed.